--- a/docs/api-specification/transactions-batch-csv.mdx
+++ b/docs/api-specification/transactions-batch-csv.mdx
@@ -1,5 +1,178 @@
 ---
-title: Transaction Batch CSV
+title: Transactions Batch CSV
 description:
   How to integrate with trasactions batch api.
 ---
+
+# Transactions Batch CSV
+
+It is also possible to create transactions by uploading it using a CSV file. The template CSV file can be found in the portal.
+
+To be able to upload, first you need to [validate the file](#validating-transactions-from-batch-file), second [upload and create transactions](#creating-transactions-through-batch-file).
+
+:::info
+Uploading a Batch CSV is only available right now for transaction method: EFT
+:::
+
+## Validating transactions from batch file
+```json
+> Payload example:
+{
+    "TransactionType": "AccountsReceivable",
+    "WalletId": "30126b59-ab21-491c-8033-008376504210",
+    "Bytes": "Zmlyc3RfbmFtZSo7bGFzdF9uYW1lKjtidXNpbmVzc19uYW1lO2luc3RpdHV0aW9uX251bWJlcio7YnJhbmNoX251bWJlcio7YWNjb3VudF9udW1iZXIqO2Ftb3VudF9pbl9jZW50cyo7dHJhbnNhY3Rpb25fY29tbWVudDttZW1vKjtzY2hlZHVsZWRfZGF0ZQpKb2huO0RvZTs7MTIzOzEyMzQ1OzEyMzQ1Njc7MTAwO0ludGVybmFsIE1lc3NhZ2U7TWVtbyBtZXNzYWdlOw=="
+}
+> Response example:
+{
+    "statusCode": 200,
+    "message": "POST Request successful.",
+    "isError": false,
+    "result": {
+        "InvalidTransactions": "0",
+        "Status": "Ok",
+        "TotalAmount": 6,
+        "Transactions": [
+            {
+                "AccountNumber": "12345671",
+                "Amount": 1,
+                "Comment": "Internal message 1",
+                "CompanyName": "",
+                "CustomerId": null,
+                "FirstName": "John1",
+                "InstitutionNumber": "123",
+                "LastName": "Doe1",
+                "Memo": "Memo message 1",
+                "Status": "Ok",
+                "TransitNumber": "23451",
+            },
+            {
+                "AccountNumber": "12345672",
+                "Amount": 2,
+                "Comment": "Internal message 2",
+                "CompanyName": "",
+                "CustomerId": null,
+                "FirstName": "John2",
+                "InstitutionNumber": "123",
+                "LastName": "Doe2",
+                "Memo": "Memo message 2",
+                "Status": "Ok",
+                "TransitNumber": "23452",
+            },
+            {
+                "AccountNumber": "12345673",
+                "Amount": 3,
+                "Comment": "Internal message 3",
+                "CompanyName": "",
+                "CustomerId": null,
+                "FirstName": "John3",
+                "InstitutionNumber": "123",
+                "LastName": "Doe3",
+                "Memo": "Memo message 3",
+                "Status": "Ok",
+                "TransitNumber": "23453",
+            }
+        ],
+        "ValidTransactions": 13
+    }
+}
+```
+
+`Method: POST`
+
+`Endpoint: {{env}}/api/transaction/ValidateBatchFile`
+
+Use this endpoint if you want to validate a transactions batch file.
+
+**Input parameters**
+
+Parameter | Type | Mandatory | Description
+--------- | ------- | ----------- | -------
+TransactionType | string | yes | Transaction type
+WalletId | string | no | The Wallet Id, according to TransactionType
+FundingSourceId | string | no | The Funding Source Id
+Bytes | string | yes | The file's blob
+
+- Concerning `FundingSourceId` and `WalletId`, just one of them must be sent
+
+
+**Response**
+
+Parameter | Type | Description
+--------- | ------- | -----------
+InvalidTransactions | string | The amount of invalid transactions
+ValidTransactions | int | The amount of valid transactions
+Status | string | The validation status
+TotalAmout | decimal | The sum of all transactions amount
+**Transactions** | | 
+AccountNumber | string | The account number
+Amount | decimal | The transaction's amount
+Comment | string | The transaction's comment
+CompanyName | string | Company's name 
+CustomerId | string | Customer id
+FirstName | string | User's first name
+LastName | string | User's last name
+InstitutionNumber | string | Institution's number
+Memo | string | The transaction's memo
+Status | string | The status
+TransitNumber | string | Transit number
+
+
+Each transaction will return a Status property explaining what is wrong with it
+
+**Status**
+
+Description |
+----------- |
+Ok |
+First Name, Last Name or Company name are mandatory |
+Either First and Last Name or Company Name should be informed |
+Institution, Transit and Account numbers are mandatory |
+Institution Number min length is 3 characters |
+Transit Number length needs to be 5 characters |
+Account Number min length is 5 characters |
+Account Number max length is 12 characters |
+Invalid amount |
+Amount must be greater than zero |
+Duplicated transaction |
+
+
+## Creating transactions through batch file
+```json
+> Payload example:
+{
+    "TransactionType": "AccountsReceivable",
+    "WalletId": "30126b59-ab21-491c-8033-008376504210",
+    "Bytes": "Zmlyc3RfbmFtZSo7bGFzdF9uYW1lKjtidXNpbmVzc19uYW1lO2luc3RpdHV0aW9uX251bWJlcio7YnJhbmNoX251bWJlcio7YWNjb3VudF9udW1iZXIqO2Ftb3VudF9pbl9jZW50cyo7dHJhbnNhY3Rpb25fY29tbWVudDttZW1vKjtzY2hlZHVsZWRfZGF0ZQpKb2huO0RvZTs7MTIzOzEyMzQ1OzEyMzQ1Njc7MTAwO0ludGVybmFsIE1lc3NhZ2U7TWVtbyBtZXNzYWdlOw=="
+}
+> Response example:
+{
+    "statusCode": 200,
+    "message": "POST Request successful.",
+    "isError": false
+}
+```
+
+`Method: POST`
+
+`Endpoint: {{env}}/api/transaction/ProcessBatchFile`
+
+Use this endpoint if you want to create transactions using a batch file
+
+**Input parameters**
+
+Parameter | Type | Mandatory | Description
+--------- | ------- | ----------- | -------
+TransactionType | string | yes | Transaction type
+WalletId | string | no | The Wallet Id, according to TransactionType
+FundingSourceId | string | no | The Funding Source Id
+Bytes | string | yes | The file's blob
+WithdrawSumTotalFromFundingSource | bool | no | If set to True, we will do one transaction to pull the entire sum of transactions in the batch from the funding source. This is only applicable for Accounts Payable transactions with more than 1 transaction in the file. It does not work for scheduled transactions.
+
+- Concerning `FundingSourceId` and `WalletId`, just one of them must be sent
+
+**TransactionType**
+
+Type | Description
+---- | -----------
+AccountsReceivable | Execute accounts receivable AR
+AccountsPayable | Execute accounts payable AP
