--- a/docs/api-specification/errors.mdx
+++ b/docs/api-specification/errors.mdx
@@ -3,3 +3,17 @@ title: Errors
 description:
   What kind of erros can occur
 ---
+
+# Errors
+
+The Zūm Rails API uses the following http error codes:
+
+Error Code | Meaning
+---------- | -------
+400 | Bad Request -- Your request is invalid.
+401 | Unauthorized -- Your API key is wrong.
+403 | Forbidden -- The endpoint requested is hidden for administrators only.
+404 | Not Found -- The specified endpoint or entity could not be found.
+429 | Too Many Requests -- You reached your quota
+500 | Internal Server Error -- We had a problem with our server. Try again later.
+
