patch - add topics to subs and invoices and missing files

--- a/docs/api-specification/invoices.mdx
+++ b/docs/api-specification/invoices.mdx
@@ -1,5 +1,14 @@
 ---
-title: Invoice
+title: Invoices
 description:
     How to integrate with invoices API
 ---
+
+#Invoices
+
+## Creating a new invoice
+## Update a invoice
+## Get a specific invoice
+## Search a invoice
+## Get invoice events
+## Modify invoice status
