--- a/docs/api-specification/subscriptions.mdx
+++ b/docs/api-specification/subscriptions.mdx
@@ -1,5 +1,15 @@
 ---
-title: Subscription
+title: Subscriptions
 description:
     How to integrate with subscription API
 ---
+
+#Subscriptions
+
+## Creating a new subscription
+## Update a subscription
+## Get a specific subscription
+## Search a subscription
+## Cancel a subscription
+## Get subscription events
+## Get subscription invoices
