--- a/docs/invoice-and-subscription/shipping.mdx
+++ b/docs/invoice-and-subscription/shipping.mdx
@@ -3,3 +3,5 @@ title: Shipping
 description:
   How shipping works
 ---
+
+Shipping rates describe the price of shipping presented to your users and can be applied to invoices/subscriptions or for checkout links to collect shipping costs. However, we won’t automatically set them on your behalf unless you specifically set it when creating the shipping rate.
