--- a/docs/invoice-and-subscription/invoice.mdx
+++ b/docs/invoice-and-subscription/invoice.mdx
@@ -1,5 +1,15 @@
 ---
-title: Invoice
+title: Invoices
 description:
   How invoices works.
 ---
+
+Invoices are statements of amount owed by a user, and are either generated one-time, or generated periodically from a subscription.
+
+Standalone invoices contain items which are product prices that have a “one-time” frequency. You can also create a one-off product which will be a temporary product just for the sake of a particular invoice. 
+
+If your invoice is configured to be charged automatically to the user on the available payment method, Zum Rails will automatically finalize your invoice and attempt payment. Once the transaction for the payment is successful, the user will receive an invoice over their email confirming the same.
+
+If your invoice is configured to be billed by sending an email to the user with a link to pay, then Zum Rails will email the invoice to your user and await payment. These emails will contain a link to a hosted page to pay the invoice.
+
+Invoices can also be created using the checkout URL/SDK if you do not have your user information. See how to get started with checkout URL/SDK here
