--- a/docs/invoice-and-subscription/tax.mdx
+++ b/docs/invoice-and-subscription/tax.mdx
@@ -3,3 +3,16 @@ title: Tax
 description:
   How taxes works
 ---
+
+Zum Rails allows you to define any number of tax rates and apply them to invoices, subscriptions, and payments when using Checkout. However, we won’t automatically set them on your behalf unless you specifically set it when creating the tax rate.
+
+Tax rates can either be exclusive or inclusive. An exclusive tax is not included in the invoice subtotal, whereas an inclusive tax is.
+
+The following table illustrates a 13% tax rate modifying the total amount due, depending on whether it’s exclusive or inclusive.
+
+Tax | Subtotal | Tax Due | Total
+--------- | ------- | -------| ----
+13% Exclusive | $5.00 | $0.65 | $5.65 ($5.00 + $0.65)
+13% Inclusive | $5.00 | $0.65 (already included in the price) | $5.00 ($4.35 + $0.65)
+
+When determining tax amounts, ZUm Rails rounds it to the smallest currency unit (2 decimals) before summing across the entire invoice. You can add multiple tax rates to invoices/subscriptions or for checkout links.
