patch - product prices api documentation

--- a/docs/api-specification/products.mdx
+++ b/docs/api-specification/products.mdx
@@ -150,6 +150,7 @@ To remove a image send a request with Filename and Bytes values has `null`
 ## Update a product
 
 ```json
+> Payload example:
 {
   "Name": "Test",
   "Description": "Teste",
@@ -304,7 +305,6 @@ FreeTrialInDays | int | Number of days for free trial
 EnableSetupFee | bool | Enable setup fee
 SetupFee | decimal | Number of days for free trial
 Currency | string | Currency set for the product price
-SetToRemove | bool | This will remove the product price of the product if set to true 
 
 
 ## Search a product
