patch - finished invoice creation

--- a/docs/api-specification/users.mdx
+++ b/docs/api-specification/users.mdx
@@ -40,7 +40,18 @@ Zūm Rails recommends using Zūm Connect
     "AddressCountry": "Canada",
     "AddressCity": "Toronto",
     "AddressState": "ON"
-  }
+  },
+  "ShippingSameAsBilling": false,
+  "Addresses":[
+    {
+        "AddressCity": "User City",
+        "AddressCountry": "Canada",
+        "AddressLine1": "user address 122",
+        "AddressLine2": "test222",
+        "AddressPostalCode": "J4V0A3",
+        "AddressState": "QC",
+        "AddressType": "Shipping"
+    }]
 }
 > Response example:
 {
