--- a/docs/api-specification/invoices.mdx
+++ b/docs/api-specification/invoices.mdx
@@ -623,6 +623,8 @@ CreatedAt         | datetime| no          | Create date
 CreatedAtOperator | string  | no          | Operator to filter with CreatedAt properties
 DueDate           | datetime| no          | Due date
 DueDateOperator   | string  | no          | Operator to filter with DueDate properties  
+UserName  | string | no | Username value
+UserNameOperator | string | no | Username Operator
 **Pagination**    |         | no          |
 PageNumber        | number  | no          | The respective page, starting at 1
 ItemsPerPage      | number  | no          | The quantity of items per page
