--- a/docs/api-specification/products.mdx
+++ b/docs/api-specification/products.mdx
@@ -443,6 +443,12 @@ This endpoint will return products based on the filter informed. Products are re
 }
 ```
 
+`Method: POST`
+
+`Endpoint: {{env}}/api/product/filter`
+
+**Response**
+
 **Input parameters**
 
 Parameter | Type | Mandatory | Description
