patch - minor corrections

--- a/docs/api-specification/invoices.mdx
+++ b/docs/api-specification/invoices.mdx
@@ -613,6 +613,10 @@ This endpoint will return products based on the filter informed. Products are re
 }
 ```
 
+Method: POST
+
+Endpoint: {{env}}/api/invoice/filter
+
 **Input parameters**
 
 Parameter         | Type    | Mandatory   | Description
