patch - start text migrations - basic concepts and ways to integrate

--- a/docs/basic-concepts/payment-methods.mdx
+++ b/docs/basic-concepts/payment-methods.mdx
@@ -3,3 +3,14 @@ title: Payment Methods
 description:
   What kind of payment methods you can use.
 ---
+
+Zūm Rails offers multiple payment methods depending on our agreement.
+
+![Zum Payment Methods](/img/docs/diagrams/payment_methods_v2.png)
+
+Method | Description | Duration | Send Funds | Request Funds
+-------| ----------- | -------- | ---------- | -----------
+EFT | Electronic funds transfer between banks | 3 times a day | Yes | Yes
+Interac | Online e-transfers, user receives an e-mail or SMS | Immediately * | Yes | Yes
+Visa Direct | Visa rails to send and pull funds directly to visa debit card | Immediately | Yes | Yes*
+Credit Card | Credit Card payments/checkout to collect funds | Immediately | No | Yes
