patch - api collection button update

--- a/docs/api-specification/api-introduction.mdx
+++ b/docs/api-specification/api-introduction.mdx
@@ -62,7 +62,7 @@ Once you have access to your sandbox portal:
 
 4) In Postman find the endpoint /Authorize, paste your api username and password and it's all set.
 
-[![Run in Postman](https://run.pstmn.io/button.svg)](https://app.getpostman.com/run-collection/a1cc1a6719657ef29b66?action=collection%2Fimport)
+[![Run in Postman](https://run.pstmn.io/button.svg)](https://god.postman.co/run-collection/10947695989d0c951b02?action=collection%2Fimport)
 
 :::note
 This Postman Collection is already prepared to set the authorization token as an environment variable, so that you don't need to copy and paste the authorization token every time. If you need to change this configuration, go to Authorize endpoint in the Postman Collection, and open the Tests tab to view how this tweak is done.
